--- a/Linked_List.csproj
+++ b/Linked_List.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC2-Insert-First.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
