--- a/Linked_List.csproj
+++ b/Linked_List.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UC2-Insert-First.cs" />
+    <Compile Include="UC3-Append.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
